--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a href=https://www.crcv.ucf.edu/chenchen/ target="_blank">Chen Chen</a>
                   </span>
                   <span class="author-block">
-                    <a target="_blank">Bill Lin</a>
+                    <a>Bill Lin</a>
                   </span>
                   </div>
 
