--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href=https://mmorafah.github.io/homepage/ target="_blank">Mahdi Morafah</a><sup>*</sup>,</span>
+                <a href=https://mmorafah.github.io/homepage/ target="_blank">Mahdi Morafah</a><sup>1</sup>,</span>
                 <span class="author-block">
-                  <a href="" target="_blank">Vyacheslav Kungurtsev</a><sup>*</sup>,</span>
+                  <a>Vyacheslav Kungurtsev</a><sup>2</sup>,</span>
                   <span class="author-block">
-                    <a href="" target="_blank">Hojin Chang</a>
+                    <a>Hojin Chang</a><sup>1</sup>,
                   </span>
                   <span class="author-block">
-                    <a href=https://www.crcv.ucf.edu/chenchen/ target="_blank">Chen Chen</a>
+                    <a href=https://www.crcv.ucf.edu/chenchen/ target="_blank">Chen Chen</a><sup>3</sup>,
                   </span>
                   <span class="author-block">
-                    <a>Bill Lin</a>
+                    <a>Bill Lin</a><sup>1</sup>,
                   </span>
                   </div>
 
