--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href=https://mmorafah.github.io/homepage/ target="_blank">Mahdi Morafah</a><sup>1</sup>,</span>
+                <a href=https://mmorafah.github.io/homepage/ target="_blank">Mahdi Morafah</a><sup>1*</sup>,</span>
                 <span class="author-block">
                   <a>Vyacheslav Kungurtsev</a><sup>2</sup>,</span>
                   <span class="author-block">
@@ -71,8 +71,11 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="author-block"><sup>1</sup>University of California San Diego, 
+                      <sup>2</sup>Czech Technical University in Prague
+                      <sup>3</sup>University of Central Florida<br>
+                      NeurIPS 2024</span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Correspondece: mmorafah@ucsd.edu</small></span>
                   </div>
 
                   <div class="column has-text-centered">
