--- a/index.html
+++ b/index.html
@@ -72,10 +72,13 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block"><sup>1</sup>University of California San Diego, 
-                      <sup>2</sup>Czech Technical University in Prague
+                      <sup>2</sup>Czech Technical University in Prague<br>
                       <sup>3</sup>University of Central Florida<br>
                       NeurIPS 2024</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Correspondece: mmorafah@ucsd.edu</small></span>
+                    <span class="eql-cntrb">
+                            <br><sup>*</sup>Correspondence: 
+                            <a href="mailto:mmorafah@ucsd.edu">mmorafah@ucsd.edu</a>
+                    </span>
                   </div>
 
                   <div class="column has-text-centered">
