--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>University of California San Diego, 
+                    <span class="author-block"><sup>1</sup>University of California San Diego (UCSD), 
                       <sup>2</sup>Czech Technical University in Prague<br>
-                      <sup>3</sup>University of Central Florida<br>
+                      <sup>3</sup>University of Central Florida (UCF)<br>
                       NeurIPS 2024</span>
                     <span class="eql-cntrb">
                             <br><sup>*</sup>Correspondence: 
