--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <span class="author-block">
                   <a>Vyacheslav Kungurtsev</a><sup>2</sup>,</span>
                   <span class="author-block">
-                    <a>Hojin Chang</a><sup>1</sup>,
+                    Hojin Chang<sup>1</sup>,
                   </span>
                   <span class="author-block">
                     <a href=https://www.crcv.ucf.edu/chenchen/ target="_blank">Chen Chen</a><sup>3</sup>,
