--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <span class="author-block">
                 <a href=https://mmorafah.github.io/homepage/ target="_blank">Mahdi Morafah</a><sup>1*</sup>,</span>
                 <span class="author-block">
-                  <a>Vyacheslav Kungurtsev</a><sup>2</sup>,</span>
+                  Vyacheslav Kungurtsev<sup>2</sup>,</span>
                   <span class="author-block">
                     Hojin Chang<sup>1</sup>,
                   </span>
@@ -66,7 +66,7 @@
                     <a href=https://www.crcv.ucf.edu/chenchen/ target="_blank">Chen Chen</a><sup>3</sup>,
                   </span>
                   <span class="author-block">
-                    <a>Bill Lin</a><sup>1</sup>,
+                    Bill Lin<sup>1</sup>,
                   </span>
                   </div>
 
