--- a/index.html
+++ b/index.html
@@ -148,6 +148,28 @@
 </section>
 <!-- End paper abstract -->
 
+<!-- Overview Section -->
+<section class="overview-section">
+  <div class="container has-text-centered">
+    <!-- Title -->
+    <h1 class="title overview-title">Overview</h1>
+
+    <!-- Teaser Image -->
+    <div class="teaser-image">
+      <img src="static/images/figure_main.jpg" alt="Overview Image">
+    </div>
+
+    <!-- Image Caption/Explanation -->
+    <p class="teaser-caption">
+      This image showcases the key steps in our process: reconstruction, recognition, and registration. 
+      The pipeline starts with the query image, followed by extracting sparse keypoints, recognizing landmarks, 
+      and registering them in a 3D space.
+    </p>
+  </div>
+</section>
+<!-- End of Overview Section -->
+
+  
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
