--- a/index.html
+++ b/index.html
@@ -228,8 +228,7 @@
 <!-- End image carousel -->
 
 
-
-
+<!--
 <!-- Youtube video -->
 <section class="hero is-small is-light">
   <div class="hero-body">
@@ -249,8 +248,7 @@
   </div>
 </section>
 <!-- End youtube video -->
-
-
+  
 <!-- Paper poster -->
 <section class="hero is-small is-light">
   <div class="hero-body">
@@ -264,8 +262,8 @@
     </div>
   </section>
 <!--End paper poster -->
-
-
+-->
+  
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
@@ -283,8 +281,7 @@
         <div class="content">
 
           <p>
-            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> which was adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
-            You are free to borrow the source code of this website, we just ask that you link back to this page in the footer. <br> This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
+            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a>, which is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
             Commons Attribution-ShareAlike 4.0 International License</a>.
           </p>
 
