--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
                       <span class="highlight-neurips">NeurIPS 2024</span>
                   </div>
 
+                  <!-- Add icons here -->
+                  <div class="icons is-centered">
+                    <img src="static/images/ucsd_logo.png" alt="UCSD Logo" class="icon-logo">
+                    <img src="static/images/ucf_logo.png" alt="UCF Logo" class="icon-logo">
+                    <img src="static/images/czech_logo.png" alt="CZECH Logo" class="icon-logo">
+                  </div>
+
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
