--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 
                   <!-- Add icons here -->
                   <div class="icons is-centered">
-                    <img src="static/images/ucsd_logo.png" alt="UCSD Logo" class="icon-logo">
-                    <img src="static/images/ucf_logo.png" alt="UCF Logo" class="icon-logo">
-                    <img src="static/images/czech_logo.png" alt="CZECH Logo" class="icon-logo">
+                    <img src="static/images/ucsd.png" alt="UCSD Logo" class="icon-logo">
+                    <img src="static/images/ucf.png" alt="UCF Logo" class="icon-logo">
+                    <img src="static/images/czech.jpg" alt="CZECH Logo" class="icon-logo">
                   </div>
 
 
