--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 <!--End paper poster -->
 -->
 
-<!-- Paper abstract -->
+<!-- Acknowledgement -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
@@ -286,7 +286,7 @@
     </div>
   </div>
 </section>
-<!-- End paper abstract -->
+<!-- End Acknowledgement -->
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
