--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                   <!-- Add icons here -->
                   <div class="icons is-centered">
                     <img src="static/images/ucsd.png" alt="UCSD Logo" class="icon-logo">
-                    <img src="static/images/ucf.png" alt="UCF Logo" class="icon-logo">
-                    <img src="static/images/czech.jpg" alt="CZECH Logo" class="icon-logo">
+                    <img src="static/images/ucf.jpg" alt="UCF Logo" class="icon-logo">
+                    <img src="static/images/cezch.jpg" alt="CZECH Logo" class="icon-logo">
                   </div>
 
 
