--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   </div>
 
                   <!-- Add icons here -->
-                  <div class="icons is-centered">
+                  <div class="icons-row">
                     <img src="static/images/ucsd.png" alt="UCSD Logo" class="icon-logo">
                     <img src="static/images/ucf.jpg" alt="UCF Logo" class="icon-logo">
                     <img src="static/images/cezch.jpg" alt="CZECH Logo" class="icon-logo">
