--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 
                   <!-- Add icons here -->
                   <div class="icons-row">
-                    <img src="static/images/ucsd.png" alt="UCSD Logo" class="icon-logo">
-                    <img src="static/images/ucf.jpg" alt="UCF Logo" class="icon-logo">
-                    <img src="static/images/cezch.jpg" alt="CZECH Logo" class="icon-logo">
+                    <img src="static/images/ucsd.png" alt="UCSD Logo" class="icon-logo" style="width: 40px; height: 40px;">
+                    <img src="static/images/ucf.jpg" alt="UCF Logo" class="icon-logo" style="width: 40px; height: 40px;">
+                    <img src="static/images/cezch.jpg" alt="CZECH Logo" class="icon-logo" style="width: 40px; height: 40px;">
                   </div>
 
 
