--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Towards Diverse Device Heterogeneous Federated Learning via Task Arithmetic Knowledge Integration</h1>
+            <!-- NeurIPS logo next to the title -->
+            <div class="title-wrapper">
+              <img src="static/images/neurips.png" alt="NeurIPS Logo" class="neurips-logo">
+              <h1 class="title is-1 publication-title">Towards Diverse Device Heterogeneous Federated Learning via Task Arithmetic Knowledge Integration</h1>
+            </div>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
