--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                       </span>
                       <!-- Add icons here -->
                       <div class="icons-row">
-                        <img src="static/images/ucsd.png" alt="UCSD Logo" class="icon-logo" style="width: 80px; height: 80px;" margin="10px 0">
+                        <img src="static/images/ucsd.png" alt="UCSD Logo" class="icon-logo" style="width: 80px; height: 80px;">
                         <img src="static/images/ucf.jpg" alt="UCF Logo" class="icon-logo" style="width: 120px; height: 80px;">
                         <img src="static/images/cezch.jpg" alt="CZECH Logo" class="icon-logo" style="width: 100px; height: 80px;">
                       </div>
