--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="column has-text-centered">
             <!-- NeurIPS logo next to the title -->
             <div class="title-wrapper">
-              <img src="static/images/neurips.png" alt="NeurIPS Logo" class="neurips-logo">
+              <img src="static/images/neurips.png" alt="NeurIPS Logo" class="neurips-logo" style="width: 80px; height: 80px;">
               <h1 class="title is-1 publication-title">Towards Diverse Device Heterogeneous Federated Learning via Task Arithmetic Knowledge Integration</h1>
             </div>
             <div class="is-size-5 publication-authors">
