--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <!-- NeurIPS logo next to the title -->
-            <div class="title-wrapper">
-              <img src="static/images/neurips.png" alt="NeurIPS Logo" class="neurips-logo" style="width: 80px; height: 80px;">
-              <h1 class="title is-1 publication-title">Towards Diverse Device Heterogeneous Federated Learning via Task Arithmetic Knowledge Integration</h1>
-            </div>
+            <h1 class="title is-1 publication-title">Towards Diverse Device Heterogeneous Federated Learning via Task Arithmetic Knowledge Integration</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -91,7 +88,9 @@
                         <img src="static/images/cezch.jpg" alt="CZECH Logo" class="icon-logo" style="width: 100px; height: 80px;">
                       </div>
                       <br>
-                      <span class="highlight-neurips">NeurIPS 2024</span>
+                      <span class="highlight-neurips">NeurIPS 2024<br>
+                      <img src="static/images/neurips.png" alt="NeurIPS Logo" class="neurips-logo" style="width: 80px; height: 80px;">
+                      </span>
                   </div>
 
 
