--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <img src="static/images/ucf.jpg" alt="UCF Logo" class="icon-logo" style="width: 120px; height: 80px;">
                       </div>
                       <br>
-                      <span class="highlight-neurips">NeurIPS 2024<br>
+                      <span class="highlight-neurips">NeurIPS 2024
                       <img src="static/images/neurips.png" alt="NeurIPS Logo" class="neurips-logo" style="width: 200px; height: 200px;">
                       </span>
                   </div>
