--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
                         <img src="static/images/ucf.jpg" alt="UCF Logo" class="icon-logo" style="width: 120px; height: 80px;">
                       </div>
                       <br>
-                      <span class="highlight-neurips">NeurIPS 2024
-                      <img src="static/images/neurips.png" alt="NeurIPS Logo" class="neurips-logo" style="width: 200px; height: 200px;">
-                      </span>
+                      <span class="highlight-neurips" style="display: flex; align-items: center;">
+                      <span style="font-size: 24px; margin-right: 10px;">NeurIPS 2024</span>
+                      <img src="static/images/neurips.png" alt="NeurIPS Logo" class="neurips-logo" style="width: 50px; height: auto;">
+                    </span>
                   </div>
 
 
