--- a/index.html
+++ b/index.html
@@ -88,10 +88,13 @@
                         <img src="static/images/ucf.jpg" alt="UCF Logo" class="icon-logo" style="width: 120px; height: 80px;">
                       </div>
                       <br>
-                      <span class="highlight-neurips" style="display: flex; align-items: center;">
-                      <span style="font-size: 24px; margin-right: 10px;">NeurIPS 2024</span>
-                      <img src="static/images/neurips.png" alt="NeurIPS Logo" class="neurips-logo" style="width: 50px; height: auto;">
-                    </span>
+                      <!-- Container for the centered NeurIPS logo and text -->
+                      <div style="display: flex; align-items: center; justify-content: center; margin-top: 20px;">
+                        <span class="highlight-neurips" style="display: inline-flex; align-items: center; text-align: center;">
+                          <span style="font-size: 24px; margin-right: 10px;">NeurIPS 2024</span>
+                          <img src="static/images/neurips.png" alt="NeurIPS Logo" class="neurips-logo" style="width: 50px; height: auto;">
+                        </span>
+                      </div>
                   </div>
 
 
