--- a/index.html
+++ b/index.html
@@ -161,6 +161,30 @@
 </section>
 <!-- End paper abstract -->
 
+
+<!-- Device Heterogeneous FL Section -->
+<section class="overview-section">
+  <div class="container has-text-centered">
+    <!-- Title -->
+    <h1 class="title overview-title">Device Heterogeneous FL</h1>
+
+    <!-- Teaser Image -->
+    <div class="teaser-image">
+      <img src="static/images/problem.jpg" alt="Overview Image">
+    </div>
+
+    <!-- Image Caption/Explanation -->
+    <p class="teaser-caption">
+      In practice, there is a wide range of device prototypes, from small devices such as IoT devices, and medium-sized ones like smartphones, 
+      to large-scale systems like workstations. Each of these devices has unique, unhashable neural network architectures designed to 
+      fit their specific hardware, software configurations, and machine learning tasks. The capabilities of these devices vary significantly,
+      with smaller devices (e.g., IoT) having smaller models and smaller datasets, while larger devices (e.g., workstations) 
+      have larger models and larger datasets.
+      These diverse device prototypes with heterogeneous model architectures participate in FL to enhance their global model performance through mutual knowledge sharing.
+</section>
+<!-- End of Overview Section -->
+
+
 <!-- Overview Section -->
 <section class="overview-section">
   <div class="container has-text-centered">
