--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     <!-- Teaser Image -->
     <div class="teaser-image">
-      <img src="static/images/figure_avgkd.jpg" alt="Overview Image">
+      <img src="static/images/figure_avgkd.jpg" alt="Overview Image", style="width: 50%; height: auto;">
     </div>
 
     <!-- Image Caption/Explanation -->
