--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <!-- Teaser Image -->
     <div class="teaser-image">
-      <img src="static/images/problem.jpg" alt="Overview Image" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
+      <img src="static/images/problem.jpg" alt="Overview Image" style="max-width: 80%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
     </div>
 
     <!-- Image Caption/Explanation -->
@@ -181,7 +181,7 @@
       with smaller devices (e.g., IoT) having smaller models and smaller datasets, while larger devices (e.g., workstations) 
       have larger models and larger datasets. <br><br>
       
-      <span style="display: inline-block; background-color: #3498db; color: white; padding: 5px 10px; border-radius: 50%; margin-right: 5px;">①</span>
+      <span style="display: inline-block; background-color: #3498db; color: white; padding: 5px 10px; border-radius: 50%; margin-right: 5px;">1</span>
       Additionally, these methods employ this single integrated distillation target to transfer knowledge across all different-size student models.
       <br><br>
       These diverse device prototypes with heterogeneous model architectures participate in FL to enhance their global model performance through mutual knowledge sharing.
