--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       with smaller devices (e.g., IoT) having smaller models and smaller datasets, while larger devices (e.g., workstations) 
       have larger models and larger datasets. <br><br>
       
-      <span style="display: inline-block; background-color: #3498db; color: white; padding: 5px 10px; border-radius: 50%; margin-right: 5px;">1</span>
+      <span style="display: inline-block; background-color: #f9f7d9; color: white; padding: 2px 2px; border-radius: 50%; margin-right: 5px;">1</span>
       Additionally, these methods employ this single integrated distillation target to transfer knowledge across all different-size student models.
       <br><br>
       These diverse device prototypes with heterogeneous model architectures participate in FL to enhance their global model performance through mutual knowledge sharing.
