--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
     <!-- Teaser Image -->
     <div class="teaser-image">
-      <img src="static/images/figure_avgkd.jpg" alt="Overview Image", style="width: 50%; height: auto;">
+      <img src="static/images/figure_avgkd.jpg" alt="Overview Image" style="max-width: 50%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
     </div>
 
     <!-- Image Caption/Explanation -->
@@ -221,7 +221,7 @@
 
     <!-- Teaser Image -->
     <div class="teaser-image">
-      <img src="static/images/figure_main.jpg" alt="Overview Image">
+      <img src="static/images/figure_main.jpg" alt="Overview Image" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
     </div>
 
     <!-- Image Caption/Explanation -->
