--- a/index.html
+++ b/index.html
@@ -212,21 +212,27 @@
 </section>
 <!-- End of Device Heterogeneous FL Section -->
 
-
 <!-- Overview Section -->
 <section class="overview-section">
   <div class="container has-text-centered">
     <!-- Title -->
     <h1 class="title overview-title">Overview</h1>
 
-    <!-- Teaser Image -->
-    <div class="teaser-image">
-      <img src="static/images/figure_main.jpg" alt="Overview Image" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
+    <!-- Teaser Images -->
+    <div style="display: flex; justify-content: center; align-items: center; gap: 20px;">
+      <!-- First Image -->
+      <div class="teaser-image">
+        <img src="static/images/fl_task_vector.jpg" alt="Overview Image" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd;">
+      </div>
+      <!-- Second Image -->
+      <div class="teaser-image">
+        <img src="static/images/figure_main.jpg" alt="Second Image" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd;">
+      </div>
     </div>
 
     <!-- Image Caption/Explanation -->
     <p class="teaser-caption" style="font-size: 1em; color: #2c3e50; line-height: 1.5; background-color: #ecf0f1; padding: 10px; border-radius: 8px; border: 1px solid #bdc3c7; text-align: left; margin: 0 auto; max-width: 100%; margin-top: 10px;">
-      This image showcases the key steps in our process: reconstruction, recognition, and registration. 
+      These images showcase the key steps in our process: reconstruction, recognition, and registration. 
       The pipeline starts with the query image, followed by extracting sparse keypoints, recognizing landmarks, 
       and registering them in a 3D space.
     </p>
