--- a/index.html
+++ b/index.html
@@ -226,28 +226,33 @@
         <div class="teaser-image">
           <img src="static/images/figure_main.jpg" alt="Overview Image 1" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
         </div>
-        <p class="teaser-caption" style="font-size: 1em; color: #2c3e50; line-height: 1.5; background-color: #ecf0f1; padding: 10px; border-radius: 8px; border: 1px solid #bdc3c7; text-align: left; margin: 0 auto; max-width: 100%; margin-top: 10px;">
-          This image showcases the key steps in our process: reconstruction, recognition, and registration. 
-          The pipeline starts with the query image, followed by extracting sparse keypoints, recognizing landmarks, 
-          and registering them in a 3D space.
-        </p>
+        <div class="caption-container" style="text-align: left; padding: 10px; background-color: #f8f8f8; border: 1px solid #ccc; border-radius: 8px; margin-top: 10px;">
+          <p class="teaser-caption" style="font-size: 1em; color: #2c3e50; line-height: 1.5;">
+            This image showcases the key steps in our process: reconstruction, recognition, and registration. 
+            The pipeline starts with the query image, followed by extracting sparse keypoints, recognizing landmarks, 
+            and registering them in a 3D space.
+          </p>
+        </div>
       </div>
       
       <!-- Second Image -->
       <div class="item">
         <div class="teaser-image">
-          <img src="static/images/fl_task_vector.jpg" alt="Overview Image 2" style="max-width: 40%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
+          <img src="static/images/fl_task_vector.jpg" alt="Overview Image 2" style="max-width: 50%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
         </div>
-        <p class="teaser-caption" style="font-size: 1em; color: #2c3e50; line-height: 1.5; background-color: #ecf0f1; padding: 10px; border-radius: 8px; border: 1px solid #bdc3c7; text-align: left; margin: 0 auto; max-width: 100%; margin-top: 10px;">
-          This second image depicts a detailed FL task vector that highlights various stages of federated learning, 
-          from task formulation to optimization.
-        </p>
+        <div class="caption-container" style="text-align: left; padding: 10px; background-color: #f8f8f8; border: 1px solid #ccc; border-radius: 8px; margin-top: 10px;">
+          <p class="teaser-caption" style="font-size: 1em; color: #2c3e50; line-height: 1.5;">
+            This second image depicts a detailed FL task vector that highlights various stages of federated learning, 
+            from task formulation to optimization.
+          </p>
+        </div>
       </div>
 
     </div>
   </div>
 </section>
 <!-- End of Overview Section with Image Carousel -->
+
 
   
 <!-- Teaser video-->
