--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         </div>
         <!-- Caption -->
         <div class="caption-container" style="text-align: left; padding: 10px; background-color: #f8f8f8; border: 1px solid #ccc; border-radius: 8px; margin-top: 10px; width: 100%;">
-          <p class="teaser-caption" style="font-size: 1em; color: #2c3e50; line-height: 1.5;">
+          <p class="teaser-caption" style="font-size: 1em; color: #2c3e50 !important; line-height: 1.5;">
             This image showcases the key steps in our process: reconstruction, recognition, and registration. 
             The pipeline starts with the query image, followed by extracting sparse keypoints, recognizing landmarks, 
             and registering them in a 3D space.
@@ -243,7 +243,7 @@
         </div>
         <!-- Caption -->
         <div class="caption-container" style="text-align: left; padding: 10px; background-color: #f8f8f8; border: 1px solid #ccc; border-radius: 8px; margin-top: 10px; width: 100%;">
-          <p class="teaser-caption" style="font-size: 1em; color: #2c3e50; line-height: 1.5;">
+          <p class="teaser-caption" style="font-size: 1em; color: #2c3e50 !important; line-height: 1.5;">
             This second image depicts a detailed FL task vector that highlights various stages of federated learning, 
             from task formulation to optimization.
           </p>
