--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                       </span>
                       <!-- Add icons here -->
                       <div class="icons-row">
-                        <img src="static/images/ucsd.png" alt="UCSD Logo" class="icon-logo" style="width: 80px; height: 80px;">
-                        <img src="static/images/cezch.jpg" alt="CZECH Logo" class="icon-logo" style="width: 100px; height: 80px;">
+                        <img src="static/images/ucsd.png" alt="UCSD Logo" class="icon-logo" style="width: 90px; height: 90px;">
+                        <img src="static/images/cezch.jpg" alt="CZECH Logo" class="icon-logo" style="width: 120px; height: 80px;">
                         <img src="static/images/ucf.jpg" alt="UCF Logo" class="icon-logo" style="width: 120px; height: 80px;">
                       </div>
                       <br>
@@ -102,7 +102,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="https://arxiv.org/abs/2409.18461>.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
