--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
   <script src="static/js/bulma-carousel.min.js"></script>
   <script src="static/js/bulma-slider.min.js"></script>
   <script src="static/js/index.js"></script>
+  <link 
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
+  rel="stylesheet" 
+  integrity="sha384-ENjdO4Dr2bkBIFxQpeoKHmG81Yb6E1Bk8EfzvR1joDvIB/k7Gq2K7dRNE2+5G7Sk" 
+  crossorigin="anonymous"
+>
+
+<!-- Bootstrap JS Bundle (includes Popper) -->
+<script 
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-qQ3rv+mdMkV8UsRCZ2zqBQXZcZqlA/zJ4hb1t8nUuZxU65fs2wEo+z8t2N2i0qM1" 
+  crossorigin="anonymous">
+</script>
+  
 </head>
 <body>
 
