--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
           <img src="static/images/figure_main.jpg" alt="Overview Image 1" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
         </div>
         <!-- Caption -->
-        <div class="caption-container" style="text-align: left; padding: 10px; background-color: #f8f8f8; border: 1px solid #ccc; border-radius: 8px; margin-top: 10px; width: 100%; z-index: 1; position: relative;">
+        <div class="carousel-caption d-none d-md-block">
           <p class="teaser-caption" style="font-size: 1em; color: #2c3e50; line-height: 1.5; z-index: 2; position: relative;">
             This image showcases the key steps in our process: reconstruction, recognition, and registration. 
             The pipeline starts with the query image, followed by extracting sparse keypoints, recognizing landmarks, 
