--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
 <!-- End of Device Heterogeneous FL Section -->
 
 <!-- Overview Section -->
-<section class="overview-section">
+<section class="overview-section" style="padding: 10px 0; background-color: #ffebee;">
   <div class="container has-text-centered">
     <!-- Title -->
-    <h1 class="title overview-title">Overview</h1>
+    <h1 class="title overview-title" style="color: #333;">Overview</h1>
 
     <!-- Teaser Image -->
     <div class="teaser-image">
